<resources>
    <string name="app_name">Assign1</string>
    <string name="signup">SignUp</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="gui_demo_21l_7504">GUI DEMO 21L-7504</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Signup">SignUp</string>
</resources>