<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etname"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:ems="12"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="80dp"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteY="207dp" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="12"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="275dp" />


    <EditText
        android:id="@+id/etpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/etpassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:hint="@string/re_enter_password"
        android:inputType="numberPassword"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="414dp" />


    <CheckBox
        android:id="@+id/Malechk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:buttonTint="#03A9F4"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/male"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="489dp" />

    <CheckBox
        android:id="@+id/Femalechk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:buttonTint="#CC577F"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/female"
        tools:layout_editor_absoluteX="224dp"
        tools:layout_editor_absoluteY="489dp" />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Signup" />


</LinearLayout>